# nacfetch

./: CMakeLists.txt  PKGBUILD  README.md  build-win.sh  flake.nix
.github/workflows/: release.yml
src/: sysinfo.win.hpp  test.cpp  thread_pool.hpp
src/nacfetch-0.0.1/: .gitignore
src/nacfetch-0.0.1/src/: main.cpp  sysinfo.cpp  sysinfo.hpp  sysinfo.win.cpp
